@@ -184,3 +184,9 @@ echo '</form>';
 
 
 ?>
+
+<script type="text/javascript" src="include/js/jquery.validation.functions.js"></script>
+
+<script type="text/javascript">
+trim_element_on_submit('#text-search_text');
+</script>
