@@ -20,7 +20,7 @@ $search_existing_project = (bool) get_parameter ('search_existing_project');
 $search_existing_task = (bool) get_parameter ('search_existing_task');
 $search_existing_incident = (bool) get_parameter ('search_existing_incident');
 $search_existing_incident_type = (bool) get_parameter ('search_existing_incident_type');
-$search_existing_group = (bool) get_parameter ('search_existing_group');
+$search_existing_project_group = (bool) get_parameter ('search_existing_project_group');
 $search_existing_sla = (bool) get_parameter ('search_existing_sla');
 $search_existing_object = (bool) get_parameter ('search_existing_object');
 $search_existing_object_type = (bool) get_parameter ('search_existing_object_type');
@@ -46,6 +46,8 @@ $search_existing_user_id = (bool) get_parameter ('search_existing_user_id');
 $search_existing_user_name = (bool) get_parameter ('search_existing_user_name');
 $search_existing_user_num = (bool) get_parameter ('search_existing_user_num');
 $search_existing_user_email = (bool) get_parameter ('search_existing_user_email');
+$search_existing_role = (bool) get_parameter ('search_existing_role');
+$search_existing_group = (bool) get_parameter ('search_existing_group');
 
 if ($search_existing_project) {
 	require_once ('include/functions_db.php');
@@ -173,7 +175,7 @@ if ($search_existing_project) {
 	echo json_encode(true);
 	return;
 	
-} elseif ($search_existing_group) {
+} elseif ($search_existing_project_group) {
 	require_once ('include/functions_db.php');
 	$group_name = get_parameter ('group_name');
 	$group_id = get_parameter ('group_id', 0);
@@ -704,7 +706,52 @@ if ($search_existing_project) {
 	echo json_encode(true);
 	return;
 	
+} elseif ($search_existing_role) {
+	require_once ('include/functions_db.php');
+	$role_name = get_parameter ('role_name');
+	$role_id = get_parameter ('role_id', 0);
+	$old_role_name = "";
+	
+	if ($role_id) {
+		$old_role_name = get_db_value("name", "trole", "id", $role_id);
+	}
+	
+	// Checks if the role is in the db
+	$query_result = get_db_value("name", "trole", "name", $role_name);
+	if ($query_result) {
+		if ($role_name != $old_role_name) {
+			// Exists. Validation error
+			echo json_encode(false);
+			return;
+		}
+	}
+	// Does not exist
+	echo json_encode(true);
+	return;
+	
+} elseif ($search_existing_group) {
+	require_once ('include/functions_db.php');
+	$group_name = get_parameter ('group_name');
+	$group_id = get_parameter ('group_id', 0);
+	$old_group_name = "";
+	
+	if ($group_id) {
+		$old_group_name = get_db_value("nombre", "tgrupo", "id_grupo", $group_id);
+	}
+	
+	// Checks if the group is in the db
+	$query_result = get_db_value("nombre", "tgrupo", "nombre", $group_name);
+	if ($query_result) {
+		if ($group_name != $old_group_name) {
+			// Exists. Validation error
+			echo json_encode(false);
+			return;
+		}
+	}
+	// Does not exist
+	echo json_encode(true);
+	return;
+	
 }
-
 
 ?>
